[metadata]
name = flake8-author
version = attr: flake8_author.__version__
author = Jon Parise
author_email = jon@indelible.org
description = Flake8 __author__ checker
long_description = file: README.rst, LICENSE, CHANGES.rst
license = MIT
url = https://github.com/jparise/flake8-author
project_urls =
    Source Code = https://github.com/jparise/flake8-author
    Issue Tracker = https://github.com/jparise/flake8-author/issues
keywords = flake8 __author__
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Framework :: Flake8
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Quality Assurance

[options]
py_modules = flake8_author
python_requires = >= 3.7
zip_safe = True

[options.entry_points]
flake8.extension =
    A40 = flake8_author:Checker

[flake8]
exclude=.eggs/,.git/,.venv/,build/,dist/
